Add ability to display the full packet payload
- 3 modes: no payload, minimal payload (save memory), full payload
- Display payload as hexdump
- Display HTTP requests and responses as string
- Show decrypted HTTPS (requires mitm addon)
- Decode chunked encoding and gzip body
- Show websockets messages (only with TLS decryption enabled)
- An icon indicates the connections decryption status
- Easily copy the HTTP request/response from the context menu

See #107

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,14 +50,14 @@
     <string name="duration">Duration</string>
     <string name="http_server">HTTP server</string>
     <string name="udp_exporter">UDP exporter</string>
-    <string name="no_dump">None</string>
-    <string name="no_dump_info">PCAP will not be dumped</string>
+    <string name="no_dump">No dump</string>
+    <string name="no_dump_info">Traffic will not be dumped</string>
     <string name="http_server_info">Start an HTTP server for the PCAP download</string>
     <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
     <string name="http_server_port">HTTP server port</string>
     <string name="receiver_ip_address">Collector IP address</string>
     <string name="receiver_port">Collector port</string>
-    <string name="dump_mode">Dump mode</string>
+    <string name="traffic_dump">Traffic dump</string>
     <string name="user_guide">User guide</string>
     <string name="open_telegram_group">Telegram group</string>
     <string name="source_code">Source code</string>
@@ -186,6 +186,7 @@
     <string name="copy_action">Copy…</string>
     <string name="url_val">"URL: %1$s"</string>
     <string name="show_only_plaintext">Plaintext connections</string>
+    <string name="show_only_cleartext">Cleartext connections</string>
     <string name="plaintext">Plaintext</string>
     <string name="malware_detection_ad0">Ready to enhance the security of your device?</string>
     <string name="malware_detection_ad1">Meet the PCAPdroid malware detection!</string>
@@ -286,4 +287,23 @@
     <string name="upgrade_action">Upgrade</string>
     <string name="export_sslkeylog">Export SSL keylog</string>
     <string name="export_failed">Export failed</string>
+    <string name="connections_payload">Payload</string>
+    <string name="no_payload">No payload</string>
+    <string name="minimal_payload">Short payload</string>
+    <string name="full_payload">Full payload</string>
+    <string name="full">Full</string>
+    <string name="payload_mode_none">The connections payload will not be shown</string>
+    <string name="payload_mode_minimal">Only the initial bytes of the payload will be shown</string>
+    <string name="payload_mode_full">The full payload will be shown (e.g. the full HTTP request and response). This requires a lot of memory</string>
+    <string name="payload">Payload</string>
+    <string name="connection">Connection</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="cleartext">Cleartext</string>
+    <string name="request">Request</string>
+    <string name="response">Response</string>
+    <string name="overview">Overview</string>
+    <string name="string_http_request">HTTP request</string>
+    <string name="string_http_response">HTTP response</string>
+    <string name="payload_visualization">Payload visualization</string>
+    <string name="payload_truncated">Only a portion of the actual payload is shown, see \"%1$s\"</string>
 </resources>
