Full German translation

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,4 +12,229 @@
     <string name="stop_button">Stoppen</string>
     <string name="start_button">Starten</string>
     <string name="destination">Ziel</string>
+    <string name="http_server_status">HTTP-Server: http://%1$s:%2$d</string>
+    <string name="query">Abfrage</string>
+    <string name="host">Host</string>
+    <string name="app_filter">Ziel-App</string>
+    <string name="about">Über</string>
+    <string name="status">Status</string>
+    <string name="app">App</string>
+    <string name="bytes">Bytes</string>
+    <string name="http_server">HTTP-Server</string>
+    <string name="no_dump">Keiner</string>
+    <string name="http_server_info">Starte einen HTTP-Server für den PCAP download</string>
+    <string name="dump_mode">Dump-Modus</string>
+    <string name="user_guide">Benutzerhandbuch</string>
+    <string name="open_telegram_group">Telegram-Gruppe</string>
+    <string name="source_code">Quellcode</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nein</string>
+    <string name="vpn_setup_failed">VPN konnte nicht eingerichtet werden</string>
+    <string name="app_not_found">App %1$s konnte nicht gefunden werden</string>
+    <string name="stats">Statistiken</string>
+    <string name="active_connections">Aktive Verbindungen</string>
+    <string name="udp_exporter">UDP-Exporter</string>
+    <string name="udp_exporter_info">Sendet das PCAP zu einen entfernten UDP-Server</string>
+    <string name="http_server_port">HTTP-Server-Port</string>
+    <string name="no_dump_info">PCAP wird nicht gedumpt</string>
+    <string name="receiver_port">Empfänger-Port</string>
+    <string name="dropped_connections">Abgebrochene Verbindungen</string>
+    <string name="tot_connections">Verbindungen insgesamt</string>
+    <string name="open_sockets">Offene Sockets</string>
+    <string name="max_file_descriptor">Max FD</string>
+    <string name="bytes_sent">Bytes gesendet</string>
+    <string name="bytes_rcvd">Bytes empfangen</string>
+    <string name="packets_sent">Pakete gesendet</string>
+    <string name="packets_rcvd">Pakete empfangen</string>
+    <string name="dns_queries">DNS-Abfragen</string>
+    <string name="search_apps">Suche Apps</string>
+    <string name="no_apps">Keine Apps</string>
+    <string name="dns_server">DNS-Server</string>
+    <string name="apps">Apps</string>
+    <string name="pcap_file">PCAP-Datei</string>
+    <string name="pcap_file_info">Erstelle eine PCAP-Datei im Gerätespeicher</string>
+    <string name="cannot_write_file">Datei kann nicht geschrieben werden</string>
+    <string name="share">Teilen</string>
+    <string name="pcap_file_action">In der Datei \"%1$s\" gespeicherter Netzwerktraffic (%2$s)</string>
+    <string name="proto_and_port">%1$s, %2$d</string>
+    <string name="conn_status_closed">Geschlossen</string>
+    <string name="copy_to_clipboard">In die Zwischenablage kopieren</string>
+    <string name="first_seen">Start der Verbindung</string>
+    <string name="last_seen">Letztes Verbindungspaket erhalten</string>
+    <string name="capture_running">Aufnahme läuft</string>
+    <string name="notification_msg">%1$s aufgenommen, %2$s Verbindungen</string>
+    <string name="paid_features">Kostenpflichtige Funktionen</string>
+    <string name="malware_whitelist_help">Benutzerdefinierte Positivliste zur Verhinderung der Malware-Erkennung. Langes drücken auf bösartige Verbindungen kann zum Erstellen von Regeln genutzt werden, um die Malware-Markierung aufzuheben</string>
+    <string name="whitelist">Positivliste</string>
+    <string name="malware_detection_summary">Erkennung von Verbindungen zu bekannten bösartigen Hosts über Sperrlisten von Drittanbietern</string>
+    <string name="billing_connecting">Verbinde mit Google Play… Versuche es später noch einmal</string>
+    <string name="hidden_connections_help">Liste der Regeln zum Ausblenden von Verbindungslisteneinträgen, um sich auf relevante fokussieren zu können</string>
+    <string name="plaintext">Klartext</string>
+    <string name="control_permissions">Berechtigungssteuerung</string>
+    <string name="control_permissions_item">%1$s: %2$s</string>
+    <string name="status_outdated">Veraltet</string>
+    <string name="status_not_loaded">Nicht geladen</string>
+    <string name="connections_checked">Geprüfte Verbindungen</string>
+    <string name="ok">OK</string>
+    <string name="delete_error">Datei kann nicht gelöscht werden</string>
+    <string name="delete">Löschen</string>
+    <string name="conn_status_open">Offen</string>
+    <string name="ctrl_consent_denied">PCAPdroid: Die Steuerungsanfrage wurde abgelehnt</string>
+    <string name="private_dns_message_notice">Ein privates DNS verhindert, dass PCAPdroid den DNS-Datenverkehr untersucht. Diese Einstellung kann in den Android-Netzwerkeinstellungen deaktiviert werden</string>
+    <string name="last_blacklists_update">Letzte Aktualisierung</string>
+    <string name="select_all">Alles auswählen</string>
+    <string name="enable_socks5_proxy_summary">Leite alle TCP-Verbindungen zum spezifizierten SOCKS5-Proxy um</string>
+    <string name="theme_dark">Dunkel</string>
+    <string name="receiver_ip_address">Empfänger-IP-Adresse</string>
+    <string name="malware_detection_learn_more">Erfahre mehr über die Malware-Erkennungsfunktion</string>
+    <string name="ads_notice">In-App-Werbeanzeigen veranlassen PCAPdroid, Datenverkehr zu externen Servern zu generieren. Werbeanzeigen können durch den Erwerb der kostenpflichtigen Funktion entfernt werden</string>
+    <string name="save_ok">Gespeichert</string>
+    <string name="internet">Internet</string>
+    <string name="uid">UID</string>
+    <string name="netd_app_info">Der System-Daemon, der die DNS-Auflösungen durchführt</string>
+    <string name="pcapdroid_trailer_summary">Den gedumpten Paketen wird eine Fußzeile mit zusätzlichen Metadaten (z. B. dem App-Namen) hinzugefügt</string>
+    <string name="rcvd_and_sent">%1$s empfangen — %2$s gesendet</string>
+    <string name="collector_info">UDP-Kollektor: %1$s:%2$d</string>
+    <string name="save_to_file">Speichern unter</string>
+    <string name="older_connections_notice">%1$d älter Verbindungen werden nicht angezeigt</string>
+    <string name="tls_how_to">So richtest du die TLS-Entschlüsselung ein</string>
+    <string name="unknown_app">Unbekannt</string>
+    <string name="enable_ipv6">IPv6 aktivieren</string>
+    <string name="enable_ipv6_summary">IPv6-Verbindungen zum Internet zulassen. Verwende dies nur in Netzwerken mit einem IPv6-Gateway</string>
+    <string name="error">Fehler</string>
+    <string name="conn_status_unreachable">Unerreichbar</string>
+    <string name="other_prefs">Andere</string>
+    <string name="app_language">App-Sprache</string>
+    <string name="lang_english">Englisch</string>
+    <string name="system_default">System</string>
+    <string name="file_saved_with_name">Datei als \"%1$s\" gespeichert</string>
+    <string name="theme_light">Hell</string>
+    <string name="get_app">Kapiert:</string>
+    <string name="no_activity_file_selection">Keine App für die Dateiauswahl gefunden</string>
+    <string name="about_text">PCAPdroid ist ein Open-Source-Netzwerkaufnahme- und Überwachungswerkzeug, das ohne Root-Rechte funktioniert</string>
+    <string name="app_theme">Thema</string>
+    <string name="enable_socks5_proxy">SOCKS5-Proxy aktivieren</string>
+    <string name="proxy">Proxy</string>
+    <string name="proxy_ip_address">Proxy-IP-Adresse</string>
+    <string name="proxy_port">Proxy-Port</string>
+    <string name="root_capture_summary">Erlaubt PCAPdroid die Ausführung mit anderen VPN-Apps</string>
+    <string name="donate">Spenden</string>
+    <string name="root_log">Root-Protokoll</string>
+    <string name="search">Suche…</string>
+    <string name="app_val">App: %1$s</string>
+    <string name="ip_address_val">IP-Adresse: %1$s</string>
+    <string name="host_val">Host: %1$s</string>
+    <string name="protocol_val">Protokoll: %1$s</string>
+    <string name="hide">Verstecken…</string>
+    <string name="n_selected">%1$d ausgewählt</string>
+    <string name="app_details">App-Details</string>
+    <string name="package_name">Paketname</string>
+    <string name="app_name">Name</string>
+    <string name="version">Version</string>
+    <string name="target_sdk">Ziel-SDK</string>
+    <string name="installed_on">Installiert am</string>
+    <string name="last_update">Letztes Update</string>
+    <string name="permissions">Berechtigungen</string>
+    <string name="root_app_info">System-Daemon, der mit maximalen Berechtigungen ausgeführt werden</string>
+    <string name="android_app_info">Das Android-System</string>
+    <string name="unknown_app_info">„Unbekannt“ markiert Verbindungen, deren App nicht ermittelt werden konnte</string>
+    <string name="packets_dropped">Entfallene Pakete</string>
+    <string name="request_plaintext">Klartextanfrage</string>
+    <string name="root_capture">Als Root aufnehmen</string>
+    <string name="whitelist_action">Positivliste…</string>
+    <string name="pcapdroid_trailer">PCAPdroid-Fußzeile</string>
+    <string name="trailer_how_to">So zeigst du die Fußzeilendaten in Wireshark an</string>
+    <string name="remove_ads">Werbung entfernen</string>
+    <string name="pending_transaction">Bitte schließe deine Transaktion ab, um diese Funktion einzulösen</string>
+    <string name="allow">Erlauben</string>
+    <string name="ctrl_consent_title">PCAPdroid-Steuerungsanforderung</string>
+    <string name="deny">Ablehnen</string>
+    <string name="ctrl_consent_allowed">PCAPdroid: Die Steueranfrage wurde zugelassen</string>
+    <string name="all_interfaces">Alle Schnittstellen</string>
+    <string name="capturing_from">Erfasse Pakete von \"%1$s\"</string>
+    <string name="edit_filter">Filter bearbeiten</string>
+    <string name="edit_list">Liste bearbeiten</string>
+    <string name="hidden_connections_rules">Versteckte Verbindungsregeln</string>
+    <string name="list_is_empty">Die Liste ist leer</string>
+    <string name="malicious_connection_app">Bösartige Verbindung erkannt (%1$s)</string>
+    <string name="show_only_malicious">Bösartige Verbindungen</string>
+    <string name="security">Sicherheit</string>
+    <string name="malware_detection">Malware-Erkennung</string>
+    <string name="reset">Zurücksetzen</string>
+    <string name="feature_not_available">Diese Funktion ist derzeit für dein Gerät nicht verfügbar</string>
+    <string name="capture_prefs">Aufnehmen</string>
+    <string name="ctrl_consent">Eine App möchte den Datenverkehr Ihres Geräts aufnehmen. 
+\nLehne ab, wenn du dir nicht sicher bist</string>
+    <string name="capture_interface">Aufnahmeschnittstelle</string>
+    <string name="malware_whitelist">Malware-Positivliste</string>
+    <string name="malware_whitelist_rules">Regeln für Malware-Positivliste</string>
+    <string name="malicious_connection_filter">Bösartig</string>
+    <string name="status_filter">Status: %1$s</string>
+    <string name="not_hidden_filter">Nicht versteckt</string>
+    <string name="copy_action">Kopieren…</string>
+    <string name="url_val">URL: %1$s</string>
+    <string name="show_only_plaintext">Klartextverbindungen</string>
+    <string name="malware_detection_ad0">Bereit, die Sicherheit deines Geräts zu verbessern\?</string>
+    <string name="malware_detection_ad1">Lerne die PCAPdroid-Malware-Erkennung kennen!</string>
+    <string name="show_me">Anzeigen</string>
+    <string name="hint">Hinweis</string>
+    <string name="once">Einmal</string>
+    <string name="forever">Immer</string>
+    <string name="country">Land</string>
+    <string name="asn">ASN</string>
+    <string name="country_val">Land: %1$s</string>
+    <string name="send_report">Bericht senden</string>
+    <string name="start_at_boot">Beim Booten starten</string>
+    <string name="malware_status_ok">Kein schädlicher Datenverkehr erkannt</string>
+    <string name="malware_status_detected">Keine schädlichen Verbindungen erkannt</string>
+    <string name="status_uptodate">Auf dem neusten Stand</string>
+    <string name="blacklist_type">Typ: %1$s</string>
+    <string name="n_rules">%1$s Regeln</string>
+    <string name="malicious_connections">Bösartige Verbindungen</string>
+    <string name="last_update_val">Letzte Aktualisierung: %1$s</string>
+    <string name="control_permissions_summary">Überprüfe, welche Apps die PCAPdroid-Aufnahme steuern dürfen</string>
+    <string name="start_at_boot_summary">Aufnahme nach dem Booten automatisch starten</string>
+    <string name="blacklists">Sperrlisten</string>
+    <string name="blacklist_type_ip">IP-Sperrliste</string>
+    <string name="blacklist_type_domain">Domain-Sperrliste</string>
+    <string name="updated_blacklists">Aktualisierte Sperrlisten</string>
+    <string name="domain_rules">Domain-Regeln</string>
+    <string name="ip_rules">IP-Regeln</string>
+    <string name="update_now">Jetzt aktualisieren</string>
+    <string name="status_updating">Aktualisierung…</string>
+    <string name="private_dns_hinders_detection">Privates DNS verhindert die Erkennung</string>
+    <string name="decryption_no_filter_warn">Wähle beim Entschlüsseln von TLS eine Ziel-App aus, um die Internetverbindung nicht zu verlieren</string>
+    <string name="block">Blockieren…</string>
+    <string name="firewall">Firewall</string>
+    <string name="firewall_rules">Firewall-Regeln</string>
+    <string name="firewall_help">Diese Liste enthält Regeln zum Blockieren von Verbindungen</string>
+    <string name="blocked_pkts">Blockiert</string>
+    <string name="n_pkts">%1$s Pkt</string>
+    <string name="show_only_blocked">Blockiert durch Firewall</string>
+    <string name="blocked_connection_filter">blockiert</string>
+    <string name="unlock_code">Entsperrungs-Code</string>
+    <string name="validate">Bestätigen</string>
+    <string name="valid">Gültig</string>
+    <string name="invalid">Ungültig</string>
+    <string name="no_intent_handler_found">Keine App zum Ausführen dieser Aktion gefunden</string>
+    <string name="network_interface">Schnittstelle</string>
+    <string name="interface_filter">Schnittstelle: %1$s</string>
+    <string name="loading">Wird geladen…</string>
+    <string name="purchased">Gekauft</string>
+    <string name="no_items_for_purchase">Keine Artikel zum Kauf verfügbar</string>
+    <string name="billing_failure">Es konnte keine Verbindung zu Google Play hergestellt werden. Bitte versuche es später erneut</string>
+    <string name="learn_more">Mehr erfahren</string>
+    <string name="buy_action">Kaufen</string>
+    <string name="remove_ads_description">Werbung aus dieser App entfernen</string>
+    <string name="malware_status_update_failed">Einige Sperrlisten sind veraltet</string>
+    <string name="item_redeemed">Eingelöst</string>
+    <string name="copied">Kopiert</string>
+    <string name="can_use_purchased_feature">Gekaufte Funktion jetzt verwenden werden</string>
+    <string name="disconnect_vpn_confirm">Aktive VPN-App trennen und fortfahren\?</string>
+    <string name="loading_apps">Lade Apps…</string>
+    <string name="open_nav_drawer">Menü öffnen</string>
+    <string name="close_nav_drawer">Menü schließen</string>
+    <string name="capture_not_running_status">Die Aufnahme läuft nicht</string>
+    <string name="start_capture_first">Starte zuerst die Aufnahme</string>
+    <string name="capture_all_apps">Datenverkehr aller Apps aufnehmen</string>
 </resources>
