--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="app_theme">Theme</string>
     <string name="socks5_proxy">SOCKS5</string>
     <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to the specified SOCKS5 proxy</string>
+    <string name="socks5_info">SOCKS5 proxy: %1$s:%2$d</string>
     <string name="proxy">Proxy</string>
     <string name="proxy_ip_address">Proxy IP address</string>
     <string name="proxy_port">Proxy port</string>
@@ -265,6 +266,7 @@
     <string name="save_ok">Saved</string>
     <string name="tls_decryption">TLS decryption (preview)</string>
     <string name="tls_decryption_summary">Decrypt the SSL/TLS traffic by performing mitm. This may now work with some apps, check out the user guide</string>
+    <string name="tls_decryption_status">TLS decryption is running</string>
     <string name="traffic_inspection">Traffic inspection</string>
     <string name="mitm_start_failed">Could not start the mitm service. Reinstall the mitm addon and retry</string>
     <string name="mitm_setup_wizard">Mitm setup wizard</string>
