--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="notification_msg">%1$s captured, %2$s connections</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Open</string>
+    <string name="conn_status_active">Active</string>
     <string name="first_seen">First seen</string>
     <string name="last_seen">Last seen</string>
     <string name="conn_status_closed">Closed</string>
