--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,4 +340,6 @@
     <string name="netd_block_missed">This connection was initiated by netd so it could not be blocked</string>
     <string name="firewall_summary">Block internet access to apps, configure rules for specific domains and IP addresses. Only works with the non-root capture</string>
     <string name="no_root_firewall">No-root firewall</string>
+    <string name="block_quick">Block QUIC</string>
+    <string name="block_quick_summary">Block QUIC connections to possibly fallback to TLS. Some apps may stop working</string>
 </resources>
