--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,7 +307,7 @@
     <string name="printable_text">Printable text</string>
     <string name="hexdump">Hexdump</string>
     <string name="geolocation">Geolocation</string>
-    <string name="geolocation_summary">Add country and ASN info by performing offline lookups</string>
+    <string name="geolocation_summary">Show country and ASN info by performing offline lookups</string>
     <string name="downloading">Downloading…</string>
     <string name="download_in_progress">Download in progress, please wait</string>
     <string name="download_failed">Download failed</string>
